--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Czym się zajmujemy</h2>
 <ul>
     <li><img 
-        src="https://github.com/ZurabSvanidze/goit-markup-hw-01/blob/main/images/img1.jpg" 
+        src="images/img1.jpg" 
         alt="programer-working-his-desk-office"
         width="370"
         height="294"/></li>
