--- a/index.html
+++ b/index.html
@@ -2,26 +2,39 @@
 <html lang="pl">
   <head>
     <meta charset="utf-8" />
-    <title>Zadanie domowe 1</title>
+    <title>Studio</title>
   </head>
   <header>
     <a href="index.html">Web Studio</a><nav><ul>
         <li><a href=/Agencja>Agencja</a></li>
         <li><a href=/Portofolio>Portofolio</a></li>
         <li><a href=/Kontakty>Kontakty</a></li></ul>
-</nav>
-<a href="mailto:info@devstudio.com">info@devstudio.com</a>
-<a href="tel:+48111111111">+48 111 111 111</a></header>
+</nav><ul>
+    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+    <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+</ul>
+</header>
 <main>
+    <section>
     <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
     <button type="button">Zamów usluge</button>
-    <ul><li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium vel animi architecto harum ex obcaecati esse suscipit soluta magnam dolorem? Iure, ipsam voluptatum debitis quisquam impedit dolorum necessitatibus nisi nihil?</li>
-    <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quisquam aliquid dolorum architecto veniam culpa maiores, ad reprehenderit voluptates recusandae enim, ipsum eos voluptatem debitis quis labore qui libero doloremque?</li>
-<li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ea illum, quibusdam error aspernatur dolore. Ducimus quasi voluptatibus sit commodi sed explicabo perferendis tempore doloribus dolorem. Doloremque aliquam ex dolore!</li>
-<li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi minima delectus aliquam earum deserunt cumque tempora eius incidunt fuga. Praesentium sit voluptatem accusamus facere nihil ab omnis delectus culpa expedita?</li>
-</ul>
+</section>
+<section><ul>
+    <li><h2>Lorem Ipsum</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium vel animi architecto harum ex obcaecati esse suscipit soluta magnam dolorem? Iure, ipsam voluptatum debitis quisquam impedit dolorum necessitatibus nisi nihil?</p>
+    </li>
+    <li><h2>Lorem Ipsum</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quisquam aliquid dolorum architecto veniam culpa maiores, ad reprehenderit voluptates recusandae enim, ipsum eos voluptatem debitis quis labore qui libero doloremque?</p>
+    </li>
+<li><h2>Lorem Ipsum</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ea illum, quibusdam error aspernatur dolore. Ducimus quasi voluptatibus sit commodi sed explicabo perferendis tempore doloribus dolorem. Doloremque aliquam ex dolore!</p>
+</li>
+<li><h2>Lorem Ipsum</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi minima delectus aliquam earum deserunt cumque tempora eius incidunt fuga. Praesentium sit voluptatem accusamus facere nihil ab omnis delectus culpa expedita?</p>
+</li>
+</ul></section>
 <section>
-    <h2>Czym się zajmujemy</h2>
+    <h3>Czym się zajmujemy</h3>
 <ul>
     <li><img 
         src="images/img7.jpg" 
@@ -47,6 +60,7 @@
             <figure><img src="images/img3.jpg"
             alt="produkt-designer-photo"
             width="270"
+            height="260"
         /><figcaption>
         <p>John Doe</p>
         <p>Produkt Designer</p>
@@ -55,7 +69,8 @@
             <li>
                 <figure><img src="images/img4.jpg"
                 alt="frontend-developer-photo"
-            width="270"/><figcaption>
+            width="270"
+            height="260"/><figcaption>
                 <p>John Doe</p>
                 <p>Frontend Developer</p>
             </figcaption>
@@ -65,7 +80,8 @@
                 <figure>
                     <img src="images/img5.jpg"
                     alt="marketer-photo"
-                    width="270"/><figcaption>
+                    width="270"
+                    height="260"/><figcaption>
                         <p>John Doe</p>
                         <p>Marketing</p>
                     </figcaption>
@@ -74,7 +90,8 @@
                 <figure>
                     <img src="images/img6.jpg"
                     alt="ui-designer-photo"
-                    width="270"/><figcaption>
+                    width="270"
+                    height="260"/><figcaption>
                         <p>John Doe</p>
                         <p>UI Designer</p>
                     </figcaption>
@@ -86,8 +103,9 @@
 <footer>
     <a href="index.html"><h3>Web Studio</h3></a> 
     <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-    <a href="mailto:info@example.com">info@example.com</a>
-    <a href="tel:+48111111111">+48 111 111 111</a>
+    <ul>
+        <li><a href="mailto:info@example.com">info@example.com</a></li>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+    </ul>
 </footer>
 </html>
- 
