--- a/index.html
+++ b/index.html
@@ -1,111 +1,141 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
   </head>
-  <header>
-    <a href="index.html">Web Studio</a><nav><ul>
-        <li><a href=/Agencja>Agencja</a></li>
-        <li><a href=/Portofolio>Portofolio</a></li>
-        <li><a href=/Kontakty>Kontakty</a></li></ul>
-</nav><ul>
-    <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-    <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-</ul>
-</header>
-<main>
-    <section>
-    <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-    <button type="button">Zamów usluge</button>
-</section>
-<section><ul>
-    <li><h2>Lorem Ipsum</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusantium vel animi architecto harum ex obcaecati esse suscipit soluta magnam dolorem? Iure, ipsam voluptatum debitis quisquam impedit dolorum necessitatibus nisi nihil?</p>
-    </li>
-    <li><h2>Lorem Ipsum</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia quisquam aliquid dolorum architecto veniam culpa maiores, ad reprehenderit voluptates recusandae enim, ipsum eos voluptatem debitis quis labore qui libero doloremque?</p>
-    </li>
-<li><h2>Lorem Ipsum</h2>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum ea illum, quibusdam error aspernatur dolore. Ducimus quasi voluptatibus sit commodi sed explicabo perferendis tempore doloribus dolorem. Doloremque aliquam ex dolore!</p>
-</li>
-<li><h2>Lorem Ipsum</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi minima delectus aliquam earum deserunt cumque tempora eius incidunt fuga. Praesentium sit voluptatem accusamus facere nihil ab omnis delectus culpa expedita?</p>
-</li>
-</ul></section>
-<section>
-    <h3>Czym się zajmujemy</h3>
-<ul>
-    <li><img 
-        src="images/img7.jpg" 
-        alt="programer-working-his-desk-office"
-        width="370"
-        height="294"/></li>
-        <li><img 
-            src="images/img.jpg" 
-            alt="web-ui-designers-are-developing-app;ication-smartphones"
-            width="370"
-            height="294"/></li><li>
-                <img 
-            src="images/img2.jpg" 
-            alt="creative-artist-web-design-with-working-colour"
-            width="370"
-            height="294"/>
-            </li>    
-</ul></section>
-<section>
-    <h2>Nasz Zespol</h2>
-    <ul>
-        <li>
-            <figure><img src="images/img3.jpg"
-            alt="produkt-designer-photo"
-            width="270"
-            height="260"
-        /><figcaption>
-        <p>John Doe</p>
-        <p>Produkt Designer</p>
-    </figcaption></figure>
-            </li>
-            <li>
-                <figure><img src="images/img4.jpg"
-                alt="frontend-developer-photo"
-            width="270"
-            height="260"/><figcaption>
+  <body>
+    <header>
+      <a href="index.html">Web Studio</a>
+      <nav>
+        <ul>
+          <li><a href="Agencja">Agencja</a></li>
+          <li><a href="Portofolio">Portfolio</a></li>
+          <li><a href="Kontakty">Kontakty</a></li>
+        </ul>
+      </nav>
+      <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <h1>EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button type="button">Zamów usluge</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
+          </li>
+          <li>
+            <h2>Lorem Ipsum</h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+              sodales dui. Interdum et malesuada
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+          <li>
+            <img
+              src="images/img7.jpg"
+              alt="programer-working-his-desk-office"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img.jpg"
+              alt="web-ui-designers-are-developing-app;ication-smartphones"
+              width="370"
+              height="294"
+            />
+          </li>
+          <li>
+            <img
+              src="images/img2.jpg"
+              alt="creative-artist-web-design-with-working-colour"
+              width="370"
+              height="294"
+            />
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h3>Nasz zespół</h3>
+        <ul>
+          <li>
+            <figure>
+              <img src="images/img3.jpg" alt="produkt-designer-photo" width="270" height="260" />
+              <figcaption>
+                <p>John Doe</p>
+                <p>Produkt Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/img4.jpg" alt="frontend-developer-photo" width="270" height="260" />
+              <figcaption>
                 <p>John Doe</p>
                 <p>Frontend Developer</p>
-            </figcaption>
-        </figure>
-            </li>
-            <li>
-                <figure>
-                    <img src="images/img5.jpg"
-                    alt="marketer-photo"
-                    width="270"
-                    height="260"/><figcaption>
-                        <p>John Doe</p>
-                        <p>Marketing</p>
-                    </figcaption>
-                </figure>
-            </li><li>
-                <figure>
-                    <img src="images/img6.jpg"
-                    alt="ui-designer-photo"
-                    width="270"
-                    height="260"/><figcaption>
-                        <p>John Doe</p>
-                        <p>UI Designer</p>
-                    </figcaption>
-                </figure>
-            </li>
-    </ul>
-</section>
-</main>
-<footer>
-    <a href="index.html"><h3>Web Studio</h3></a> 
-    <address>m. Warszawa, Aleje Jerozolimskie 21</address>
-    <ul>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/img5.jpg" alt="marketer-photo" width="270" height="260" />
+              <figcaption>
+                <p>John Doe</p>
+                <p>Marketing</p>
+              </figcaption>
+            </figure>
+          </li>
+          <li>
+            <figure>
+              <img src="images/img6.jpg" alt="ui-designer-photo" width="270" height="260" />
+              <figcaption>
+                <p>John Doe</p>
+                <p>UI Designer</p>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="index.html"><h4>Web Studio</h4></a>
+      <address>m. Warszawa, Aleje Jerozolimskie 21</address>
+      <ul>
         <li><a href="mailto:info@example.com">info@example.com</a></li>
         <li><a href="tel:+48111111111">+48 111 111 111</a></li>
-    </ul>
-</footer>
+      </ul>
+    </footer>
+  </body>
 </html>
